# onepwd

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: smoke_test.py
src/onepwd/: __init__.py  _process.py  cli.py  client.py  exceptions.py
tests/: conftest.py  test_cli.py  test_client_lifecycle.py  test_client_read.py  test_client_write.py
