[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onepwd"
dynamic = ["version"]
description = "A Python wrapper around the 1Password CLI (op)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sam P (Spury)" }]
keywords = ["1password", "op", "secrets", "cli", "vault"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/imspury/onepwd#readme"
Source = "https://github.com/imspury/onepwd"
Issues = "https://github.com/imspury/onepwd/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
onepwd = "onepwd.cli:main"

[tool.hatch.version]
path = "src/onepwd/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/onepwd"]

[tool.hatch.build.targets.sdist]
include = [
    "src/onepwd",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
